# json-tui

./: AGENTS.md  LICENSE.txt  README.md  docker-compose.yml  main.py  pyproject.toml  sample.json
src/json_tui/: __init__.py  __main__.py  app.py  logging.py
src/json_tui/models/: __init__.py  json_node.py
src/json_tui/widgets/: __init__.py  column.py  column_view.py  preview.py
