[project]
name = "json-tui"
version = "1.0.2"
description = "A terminal JSON viewer with columnar navigation like JSON Hero"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "textual>=8.0.2",
]

[project.scripts]
json-tui = "json_tui.__main__:main"

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/json_tui"]
