[project]
name = "json-tui"
version = "1.1.1"
description = "A terminal JSON viewer with columnar navigation like JSON Hero"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "loguru>=0.7.3",
    "orjson>=3.11.7",
    "textual>=8.0.2",
]

[project.scripts]
json-tui = "json_tui.__main__:main"

[project.urls]
Homepage = "https://github.com/marco-gallegos/json-tui"

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/json_tui"]
